deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kemo-labs-site
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: kemo-labs-site
    service: kemo-labs-site
    component: kemo-labs-site
    id: kemo-labs-site
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http-tcp
  selector:
    id: kemo-labs-site
  type: ClusterIP
